    connection (e.g. lo is the only interface), then the HTTP server settings
    page is hidden.
 7. Only show actions on moue-over.
 8. Use larger action icons in icon view when we have larger previews.
 9. Better non-monochrome radio-stream icons. Thanks to Grely
10. Dont use alternating rows in views (does nto look too great with grouped
    view). Use a fading divider instead.

1.0.3
-----
1. Dont display codec settings in copy dialog unless we are copying to a
   device, or from an AudioCD.
2. Save size of Track Organiser, Tag Editor, and ReplayGain dialogs.
3. Fix consistency of default button in messageboxes between Qt and KDE builds.
4. Unless using a dark toolbar, use same colour for toolbar menu icon as per
   menu icon in views.
5. Document how to make a release build.
6. When searchinbg for artist information, if song's album artist contains
   artist, then use album artist. This si for track that have an artist such
   as "abc featuring 123", and album artist is "abc"
7. Improve comsume icon at larger sizes.

1.0.2.1
-------
1. Re-spin to add Qt SVG iconengine to windows installer.

1.0.2
-----
 1. Show artist name as caption for cover dialog when setting artist images.
 2. Connect 'Set Cover' signal for windows builds.
 3. Fix usage of timers in threads.
 4. Fix non-taglib build.
 5. Fix loading of SVGs in windows build.
 6. Fix cover downloading.
 7. Fix deletion of threads.
 8. Enable online services for windows builds.
 9. Fix 'No such song' warning when removing songs from playqueue.
10. Indicate when streams file is read-only.
11. Better status labels for streams and dynamic pages.

1.0.1
-----
1. Dont display Jamendo and Magnatune cache settings in config dialog if these
   have been disabled at build time.
2. Correctly calculate size of cache folders when folder does not exist.
3. Fix deletion of cache when single item selected.

1.0.0
-----
  1. Give tooltips to view actions.
  2. Add 'Set Album Artist from Artist' action to tag editor.